tests/negative/runtime/string_index_empty/input.ci
void main() {
    string s = "";
    print(s[0] + "\n");
}
